<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    >
    <LinearLayout
        android:id="@+id/LinearLayout_One"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/LinearLayout_Two"
        >
        <ImageView
            android:id="@+id/img_View"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon_launcher"
            />
        <Button
            android:id="@+id/btn_Edit_Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/add_image"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LinearLayout_Two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/message_Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_name"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_weight="1"
                />
            <EditText
                android:id="@+id/txt_Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name_text_hint"
                android:textSize="24sp"
                android:inputType="text"
                android:layout_weight="2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/message_Surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_surname"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_weight="1"
                />
            <EditText
                android:id="@+id/txt_Surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/surname_text_hint"
                android:textSize="24sp"
                android:inputType="text"
                android:layout_weight="2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/message_Email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_email"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/txt_Email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="User_Email"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_weight="2"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_Save_Change"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_change"
        android:textSize="24sp"
        android:layout_alignParentBottom  ="true"
        />
</RelativeLayout>

